# hs-coreaudio

./: LICENSE  hs-coreaudio.cabal
doc/examples/: ListAudioUnits.hs  PlayMidi.hs  Test.hs
src/Sound/AudioToolbox/: AUGraph.hs
src/Sound/AudioUnit/: AUComponent.hs  MusicDevice.hs
src/Sound/CoreAudio/: AUGraph.hs  AUGraph.hsc
src/System/Mac/: ComponentDescription.hsc  Components.hsc  OSStatus.hs  OSType.hs  Types.hs
