Name:           coreaudio
Version:        0.1
Synopsis:       CoreAudio bindings for Haskell
Description:    This package contains low-level CoreAudio bindings
                via GHC's FFI.
Cabal-Version:  >= 1.6
Build-Type:     Simple
License:        BSD3
License-file:   LICENSE
Author:         Jeremy Voorhis <jvoorhis@gmail.com>
Homepage:       http://jvoorhis.com/
Copyright:      (c) 2009 Jeremy Voorhis
Category:       Sound
Stability:      experimental

Library
    hs-source-dirs: src
    ghc-options: -Wall -O2 -fvia-c -funbox-strict-fields
    exposed-modules:
        Sound.CoreAudio.AUGraph,
        System.Mac.ComponentDescription,
        System.Mac.OSStatus,
        System.Mac.OSType
    frameworks: AudioToolbox
    
    build-depends:
        base >= 4 && < 5,
        containers >= 0.2.0.1
